relationship b/w item n lineitem del-invoice

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+
 }
