--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,8 @@ dependencies {
 
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
+   // implementation 'com.itextpdf:itextg:5.5.10'
+
+    implementation 'com.itextpdf:itext7-core:7.1.8'
+
 }
