--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,6 @@ dependencies {
 
     implementation 'com.itextpdf:itext7-core:7.1.8'
 
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+
 }
